--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,15 @@ p {
 .f-center {
   text-align: center;
 }
+
+.padding-2 {
+  padding-left: 1em;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-items-center {
+  align-items: center;
+}
